--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div style="margin-top: 50px; text-align: center;">
     <img class="image" src="icone2.png" alt="" height="250" width="250">
-    <h1>ViNaNet.Ofc</h1>
+    <h1>ViNaNet</h1>
   </div>
 
   <hr class="hr">
