--- a/index.html
+++ b/index.html
@@ -53,6 +53,34 @@
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4lHBfWF'"></button>
       </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/715Y9D5zNWL._SY342_.jpg" alt="" height="170" width="120">
+        </div>
+        <p>Manual de persuasão do FBI</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/3LXclFR'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/812BaW4MacL._SY342_.jpg" alt="" height="170" width="150">
+        </div>
+        <p>O Príncipe - Edição de Luxo Almofadada</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4rcyRe9'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/71pn8H1Ev4L._SY342_.jpg" alt="" height="170" width="120">
+        </div>
+        <p>Pense e enriqueça</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/43LkNOB'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -63,7 +91,7 @@
     <section class="secoes">
       <div class="cartoes">
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/51n64ZEBjeL._AC_SX569_.jpg" alt="" height="130" width="150">
+          <img src="https://m.media-amazon.com/images/I/51n64ZEBjeL._AC_SX569_.jpg" alt="" height="130" width="180">
         </div>
         <p>Boné aba reta Five Panel</p>
         <br>
@@ -73,12 +101,49 @@
 
       <div class="cartoes">
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/61rwC9emfrL._AC_SX569_.jpg" alt="" height="130" width="130">
+          <img src="https://m.media-amazon.com/images/I/61rwC9emfrL._AC_SX569_.jpg" alt="" height="130" width="180">
         </div>
         <p>Boné aba reta Art Deco Five Panel</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4evCDsV'"></button>
       </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51E0v-0GqTL._AC_SX385_.jpg" alt="" height="160" width="110">
+        </div>
+        <p>Suéter de gola rolê slim fit - pulôver de malha leve</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/49BhZY1'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/71UFi8OcYLL._AC_SX385_.jpg" alt="" height="150" width="140">
+        </div>
+        <p>Short Academia 3d Super Elastano Zero Transparência Selene</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4roJjPR'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51TQTq6rO8L._AC_SX385_.jpg" alt="" height="160" width="180">
+        </div>
+        <p>Camiseta Dry Fit Preta Modelo Bope - Black Skull</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4rgd3OD'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/61Jlu9jjD2L._AC_SX569_.jpg" alt="" height="150" width="150">
+        </div>
+        <p>Kit 5 Shorts Bermudas Em Linho Premium Masculina Básico</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/49CrYfI'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -106,6 +171,43 @@
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4kFrW8L'"></button>
       </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51IuNYxPp8L._SX342_.jpg" alt="" height="120" width="130">
+        </div>
+        <p>Balança Digital de Precisão de Cozinha Para Uso Domestico e Profissional Fitness </p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/483VV5O'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/41G9SoYlphL._AC_SY450_.jpg" alt="" height="120" width="130">
+        </div>
+        <p>Escova de Limpeza Elétrica Portátil Sem Fio Recarregável - Giratória</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4a6dd4X'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/41Q4HoPivfL._AC_SX425_.jpg" alt="" height="140" width="90">
+        </div>
+        <p>Copo Stanley, 473 ml, para bebidas quentes ou frias</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/3XMGD0C'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/31KlNWTpfvL._AC_SX450_.jpg" alt="" height="90" width="150">
+        </div>
+        <p>Fogareiro Elétrico Portátil 2 Bocas 2000W 127V </p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4o9nErR'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -140,6 +242,34 @@
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4pgaE4B'"></button>
       </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51lK2Uqu8NL._AC_SY450_.jpg" alt="" height="130" width="100">
+        </div>
+        <p>Fone de Ouvido Sem Fio com Cancelamento de Ruído</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/48cR3LX'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51ncb3XF4ML._AC_SY355_.jpg" alt="" height="130" width="100">
+        </div>
+        <p>Mouse sem fio Logitech Trackball ERGO M575S</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4abKOKN'"></button>
+      </div>
+
+      <div class="cartoes">
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/61lGkaRPZtL._AC_SY450_.jpg" alt="" height="90" width="180">
+        </div>
+        <p>Redragon TECLADO MECANICO GAMER FIZZ RGB PRETO SWITCH AZUL</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4ri4hzC'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -151,9 +281,7 @@
       <p><strong>@vinanet.ofc</strong></p>
     </div>
     <p><strong>© 2025 — ViNaNet</strong></p>
-
   </footer>
-
 </body>
 
 </html>
