--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 </head>
 
 <body>
+
+  <nav class="topbar">
+    <div class="logo">
+      <img src="icone2.png" alt="">
+      <span>ViNaNet</span>
+    </div>
+
+    <div class="menu">
+      <a href="sobre.html" target="_blank">Sobre</a>
+      <a href="contato.html" target="_blank">Contato</a>
+    </div>
+  </nav>
+
   <div style="margin-top: 50px; text-align: center;">
-    <img class="image" src="icone2.png" alt="" height="250" width="250">
+    <!-- <img class="image" src="icone2.png" alt="" height="250" width="250"> -->
     <h1>ViNaNet</h1>
   </div>
 
@@ -30,7 +43,7 @@
         </div>
         <p>Poder manipulação</p>
         <br>
-        <button class="botao" onclick="window.location.href='https://amzn.to/40E4ilG', '-blank'"></button>
+        <button class="botao" onclick="window.location.href='https://amzn.to/40E4ilG'"></button>
       </div>
 
 
