--- a/index.html
+++ b/index.html
@@ -103,6 +103,29 @@
         <button class="botao" onclick="window.location.href='https://amzn.to/43LkNOB'"></button>
       </div>
 
+      <div class="cartoes">
+        <p class="titulo-produto ">A Arte da Guerra</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/71Xw-t2GVxL._SY342_.jpg" alt="" height="170" width="170">
+        </div>
+        <p class="descricao-produto">A Arte da Guerra é uma obra-prima da estratégia militar cujos ensinamentos
+          influenciam líderes e estrategistas até hoje.</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/48887Ux'"></button>
+      </div>
+
+      <div class="cartoes">
+        <p class="titulo-produto ">O homem mais rico da Babilônia</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51xUHC5dBTL._SY445_SX342_ControlCacheEqualizer_.jpg" alt=""
+            height="175" width="130">
+        </div>
+        <p class="descricao-produto">Clason mostra soluções ao mesmo tempo sábias e muito atuais para evitar a falta de
+          dinheiro.</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/48887Ux'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -169,6 +192,26 @@
           <img src="https://m.media-amazon.com/images/I/61Jlu9jjD2L._AC_SX569_.jpg" alt="" height="150" width="150">
         </div>
         <p class="descricao-produto">5 Shorts Bermudas Em Linho Premium Masculina Básico</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/49CrYfI'"></button>
+      </div>
+
+      <div class="cartoes">
+        <p class="titulo-produto ">Calça de cargo masculina</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/61-37QapoOL._AC_SX342_.jpg" alt="" height="160" width="125">
+        </div>
+        <p class="descricao-produto">Estilo tático, leve para uso ao ar livre com vários bolsos</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/49CrYfI'"></button>
+      </div>
+
+      <div class="cartoes">
+        <p class="titulo-produto ">Chapéu Bucket </p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51qpbrsBtVL._AC_SX342_.jpg" alt="" height="160" width="120">
+        </div>
+        <p class="descricao-produto">Com Cordão de Ajuste Estilo Wave Praia Sol Calor Pesca Viagens Passeios</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/49CrYfI'"></button>
       </div>
@@ -247,6 +290,29 @@
         <button class="botao" onclick="window.location.href='https://amzn.to/4o9nErR'"></button>
       </div>
 
+      <div class="cartoes">
+        <p class="titulo-produto ">Kit de Vedação a Vácuo</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/51K9CabKG6L._AC_SY450_.jpg" alt="" height="120" width="160">
+        </div>
+        <p class="descricao-produto">Portátil com Bomba de Sucção USB e Seis Sacos Reutilizáveis para Conservação de
+          Alimentos Doméstica e em Viagens </p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/48HbW3e'"></button>
+      </div>
+
+      <div class="cartoes">
+        <p class="titulo-produto ">Afiador de Facas Manual</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/414fZs+WuFL._AC_SY300_SX300_QL70_ML2_.jpg" alt="" height="100"
+            width="190">
+        </div>
+        <p class="descricao-produto">Base Antiderrapante com Pegador Ergonômico tanto para Cozinha Profissional quanto
+          Doméstica </p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/48HbW3e'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -319,6 +385,27 @@
         <button class="botao" onclick="window.location.href='https://amzn.to/4ri4hzC'"></button>
       </div>
 
+      <div class="cartoes">
+        <p class="titulo-produto ">Headset Gamer</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/619T-Fp+EkL._AC_SY450_.jpg" alt="" height="180" width="180">
+        </div>
+        <p class="descricao-produto">Redragon Zeus Pro Preto Sem Fio 7.1 H510-PRO</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4ri4hzC'"></button>
+      </div>
+
+      <div class="cartoes">
+        <p class="titulo-produto ">Caixa de Som Portátil</p>
+        <div class="moldura">
+          <img src="https://m.media-amazon.com/images/I/61rJsYYacyL._AC_SY355_.jpg" alt="" height="160" width="160">
+        </div>
+        <p class="descricao-produto">Caixa de Som Bluetooth, Conexão USB, Cartão de Memória, Perfeita Para Viagens,
+          Festas, Praia, Botões de Controle, Impermeável</p>
+        <br>
+        <button class="botao" onclick="window.location.href='https://amzn.to/4ri4hzC'"></button>
+      </div>
+
     </section>
   </div>
 
@@ -329,7 +416,7 @@
         alt="" height="50px" width="50px" style="margin-top: 5px; ">
       <h4 style="color: black;"><strong>@vinanet.ofc</strong></h4>
     </div>
-      <p id="g">© 2025 — ViNaNet</p>
+    <p id="g">© 2025 — ViNaNet</p>
   </footer>
 
 </body>
