--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     </div>
   </nav>
 
-  <div style="margin-top: 50px; text-align: center;">
+  <div class="front">
     <!-- <img class="image" src="icone2.png" alt="" height="250" width="250"> -->
-    <h1>ViNaNet</h1>
+    <h1 class="front">ViNaNet</h1>
+    <!-- <h2 id="h2">Produtos de todos os tipos, para todos os gostos e com preço baixo</h2> -->
   </div>
 
   <hr class="hr">
@@ -422,4 +423,3 @@
 </body>
 
 </html>
-
