--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -56,7 +57,9 @@
       <div class="cartoes" data-category="livros">
         <p class="titulo-produto">Poder manipulação</p>
         <div class="moldura">
-          <img class="image" src="https://m.media-amazon.com/images/I/41GnAlGKIlL._SY445_SX342_ControlCacheEqualizer_.jpg" alt="" height="170" width="120">
+          <img class="image"
+            src="https://m.media-amazon.com/images/I/41GnAlGKIlL._SY445_SX342_ControlCacheEqualizer_.jpg" alt=""
+            height="170" width="120">
         </div>
         <p class="descricao-produto">A Versão moderna de O Príncipe de Maquiavel</p>
         <br>
@@ -66,7 +69,8 @@
       <div class="cartoes" data-category="livros">
         <p class="titulo-produto">Como fazer amigos e influenciar pessoas</p>
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/41RTbO7BvbL._SY445_SX342_ControlCacheEqualizer_.jpg" alt="" height="170" width="120">
+          <img src="https://m.media-amazon.com/images/I/41RTbO7BvbL._SY445_SX342_ControlCacheEqualizer_.jpg" alt=""
+            height="170" width="120">
         </div>
         <p class="descricao-produto">Clássico, Bíblia das relações interpessoais.</p>
         <br>
@@ -118,7 +122,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/71Xw-t2GVxL._SY342_.jpg" alt="" height="170" width="170">
         </div>
-        <p class="descricao-produto">A Arte da Guerra é uma obra-prima da estratégia militar cujos ensinamentos influenciam líderes e estrategistas até hoje.</p>
+        <p class="descricao-produto">A Arte da Guerra é uma obra-prima da estratégia militar cujos ensinamentos
+          influenciam líderes e estrategistas até hoje.</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/48887Ux'"></button>
       </div>
@@ -126,9 +131,11 @@
       <div class="cartoes" data-category="livros">
         <p class="titulo-produto">O homem mais rico da Babilônia</p>
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/51xUHC5dBTL._SY445_SX342_ControlCacheEqualizer_.jpg" alt="" height="165" width="120">
+          <img src="https://m.media-amazon.com/images/I/51xUHC5dBTL._SY445_SX342_ControlCacheEqualizer_.jpg" alt=""
+            height="165" width="120">
         </div>
-        <p class="descricao-produto">Clason mostra soluções mesmo tempo sábias e muito atuais para evitar a falta de dinheiro.</p>
+        <p class="descricao-produto">Clason mostra soluções mesmo tempo sábias e muito atuais para evitar a falta de
+          dinheiro.</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4iNjtRA'"></button>
       </div>
@@ -238,9 +245,11 @@
       <div class="cartoes" data-category="domesticos">
         <p class="titulo-produto">Copo Térmico</p>
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/61I7vKiZ1WL._AC_SY300_SX300_QL70_ML2_.jpg" alt="" height="140" width="130">
+          <img src="https://m.media-amazon.com/images/I/61I7vKiZ1WL._AC_SY300_SX300_QL70_ML2_.jpg" alt="" height="140"
+            width="130">
         </div>
-        <p class="descricao-produto">Copo Térmico com Canudo Tampa e Alça 1,18L, para viagem vácuo dupla camada aço inoxidável</p>
+        <p class="descricao-produto">Copo Térmico com Canudo Tampa e Alça 1,18L, para viagem vácuo dupla camada aço
+          inoxidável</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4n2Sv9J'"></button>
       </div>
@@ -250,7 +259,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/41dvAip-VtL._AC_SX679_.jpg" alt="" height="130" width="130">
         </div>
-        <p class="descricao-produto">Barra P/ Flexão Exercícios Treino Regulável 62 A 100 Cm Fixa suportndo mais de 100kg</p>
+        <p class="descricao-produto">Barra P/ Flexão Exercícios Treino Regulável 62 A 100 Cm Fixa suportndo mais de
+          100kg</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4kFrW8L'"></button>
       </div>
@@ -270,7 +280,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/41G9SoYlphL._AC_SY450_.jpg" alt="" height="120" width="130">
         </div>
-        <p class="descricao-produto">Escova Elétrica Giratória Portátil Sem Fio 7 Cabeças Lavagem de Pratos, Banheiro, Piso, Vidro e Limpeza Doméstica Geral</p>
+        <p class="descricao-produto">Escova Elétrica Giratória Portátil Sem Fio 7 Cabeças Lavagem de Pratos, Banheiro,
+          Piso, Vidro e Limpeza Doméstica Geral</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4a6dd4X'"></button>
       </div>
@@ -290,7 +301,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/31KlNWTpfvL._AC_SX450_.jpg" alt="" height="90" width="150">
         </div>
-        <p class="descricao-produto">Fogareiro Elétrico Portátil 2 Bocas 2000W 127V Cooktop de Mesa para Camping, Viagem e Uso Doméstico</p>
+        <p class="descricao-produto">Fogareiro Elétrico Portátil 2 Bocas 2000W 127V Cooktop de Mesa para Camping, Viagem
+          e Uso Doméstico</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4o9nErR'"></button>
       </div>
@@ -300,7 +312,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/51K9CabKG6L._AC_SY450_.jpg" alt="" height="120" width="160">
         </div>
-        <p class="descricao-produto">Portátil com Bomba de Sucção USB e Seis Sacos Reutilizáveis para Conservação de Alimentos Doméstica e em Viagens</p>
+        <p class="descricao-produto">Portátil com Bomba de Sucção USB e Seis Sacos Reutilizáveis para Conservação de
+          Alimentos Doméstica e em Viagens</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/48HbW3e'"></button>
       </div>
@@ -308,9 +321,11 @@
       <div class="cartoes" data-category="domesticos">
         <p class="titulo-produto">Afiador de Facas Manual</p>
         <div class="moldura">
-          <img src="https://m.media-amazon.com/images/I/414fZs+WuFL._AC_SY300_SX300_QL70_ML2_.jpg" alt="" height="100" width="190">
+          <img src="https://m.media-amazon.com/images/I/414fZs+WuFL._AC_SY300_SX300_QL70_ML2_.jpg" alt="" height="100"
+            width="190">
         </div>
-        <p class="descricao-produto">Base Antiderrapante com Pegador Ergonômico tanto para Cozinha Profissional quanto Doméstica</p>
+        <p class="descricao-produto">Base Antiderrapante com Pegador Ergonômico tanto para Cozinha Profissional quanto
+          Doméstica</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/44dzxWG'"></button>
       </div>
@@ -351,7 +366,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/51IPtedWrsL._AC_SX522_.jpg" alt="" height="130" width="200">
         </div>
-        <p class="descricao-produto">Teclado e Mouse sem fio com batéria durável, teclado completo compatível com todos os SO's</p>
+        <p class="descricao-produto">Teclado e Mouse sem fio com batéria durável, teclado completo compatível com todos
+          os SO's</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4pgaE4B'"></button>
       </div>
@@ -361,7 +377,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/51lK2Uqu8NL._AC_SY450_.jpg" alt="" height="140" width="90">
         </div>
-        <p class="descricao-produto">Fone de Ouvido Sem Fio com Cancelamento de Ruído Graves Poderosos Bluetooth de Reprodução, Resistência à Água</p>
+        <p class="descricao-produto">Fone de Ouvido Sem Fio com Cancelamento de Ruído Graves Poderosos Bluetooth de
+          Reprodução, Resistência à Água</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/48cR3LX'"></button>
       </div>
@@ -371,7 +388,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/51ncb3XF4ML._AC_SY355_.jpg" alt="" height="130" width="100">
         </div>
-        <p class="descricao-produto">Mouse sem fio Logitech Trackball controle Fácil do Polegar, Rastreamento Preciso e Suave, Conexão Bluetooth e USB Logi Bolt</p>
+        <p class="descricao-produto">Mouse sem fio Logitech Trackball controle Fácil do Polegar, Rastreamento Preciso e
+          Suave, Conexão Bluetooth e USB Logi Bolt</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4abKOKN'"></button>
       </div>
@@ -381,7 +399,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/61lGkaRPZtL._AC_SY450_.jpg" alt="" height="90" width="180">
         </div>
-        <p class="descricao-produto">Redragon TECLADO MECANICO GAMER FIZZ iluminação RGB PRETO SWITCH AZUL CABO USB REMOVÍVEL</p>
+        <p class="descricao-produto">Redragon TECLADO MECANICO GAMER FIZZ iluminação RGB PRETO SWITCH AZUL CABO USB
+          REMOVÍVEL</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4ri4hzC'"></button>
       </div>
@@ -401,7 +420,8 @@
         <div class="moldura">
           <img src="https://m.media-amazon.com/images/I/61rJsYYacyL._AC_SY355_.jpg" alt="" height="160" width="160">
         </div>
-        <p class="descricao-produto">Caixa de Som Bluetooth, Conexão USB, Cartão de Memória, Perfeita Para Viagens, Festas, Praia, Botões de Controle, Impermeável</p>
+        <p class="descricao-produto">Caixa de Som Bluetooth, Conexão USB, Cartão de Memória, Perfeita Para Viagens,
+          Festas, Praia, Botões de Controle, Impermeável</p>
         <br>
         <button class="botao" onclick="window.location.href='https://amzn.to/4rKeN2M'"></button>
       </div>
@@ -410,7 +430,9 @@
 
   <footer>
     <div class="social">
-      <img src="https://imgs.search.brave.com/sblims6PNcHwma5gmYJm9AmoAEoPmSNfxVC76QG2mew/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wNDUv/OTM0LzI0My9zbWFs/bC9pbnN0YWdyYW0t/bG9nby1pY29uLXRy/YW5zcGFyZW50LWJh/Y2tncm91bmQtZnJl/ZS1wbmcucG5n" alt="" height="50px" width="50px" style="margin-top: 5px;">
+      <img
+        src="https://imgs.search.brave.com/sblims6PNcHwma5gmYJm9AmoAEoPmSNfxVC76QG2mew/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wNDUv/OTM0LzI0My9zbWFs/bC9pbnN0YWdyYW0t/bG9nby1pY29uLXRy/YW5zcGFyZW50LWJh/Y2tncm91bmQtZnJl/ZS1wbmcucG5n"
+        alt="" height="50px" width="50px" style="margin-top: 5px;">
       <h4 style="color: black;"><strong>@vinanet.ofc</strong></h4>
     </div>
     <p id="g">© 2025 — ViNaNet</p>
